# software-project-estimator

./: .pylintrc  LICENSE  README.md  README.rd  pyproject.toml  requirements.txt
.github/workflows/: pr-checks.yml  pylint.yml  unittest.yml
examples/: load_from_csv.py
examples/assets/: fake-project.csv
src/examples/assets/: fake-project.csv
src/software_project_estimator/: __init__.py  event.py  observer.py  project.py  task.py
src/software_project_estimator/simulation/: iteration.py  models.py  monte_carlo.py
src/software_project_estimator/simulation/states/: __init__.py  iteration_base_state.py  iteration_state_calculating_days.py  iteration_state_calculating_weeks.py  iteration_state_error.py  iteration_state_finalizing.py  iteration_state_successful.py  iteration_state_uninitialized.py
src/tests/: test_observer.py  test_project.py  test_simulation.py  test_task.py
tests/: test_observer.py
