[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_software_project_estimator"
version = "0.1.2"
authors = [
    {name = "Matthew Sewell", email = "matthew@ragingbits.com"},
]
description = "Estimate the time and cost of a software project" 
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy",
    "holidays",
    "pydantic"
]

[project.urls]
"Hompage" = "https://artificiallyunintelligent.com"
"Source" = "https://github.com/matthewsewell/software-project-estimator"

[options]
python_requires = ">=3.9"
